--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+:root{
+  --primary-color:#F5630A;
+}
 
 *{
     box-sizing:border-box;
@@ -13,45 +16,56 @@
   }
   
   .resim1{
-    background-color:rgba(255,255,255, 0.7);
     display:flex;
+    /* flex: 1 0 21%; Anna*/
     flex-wrap: wrap;
     justify-content: space-around;
     gap: 10px;
     float:initial;
+    
   }
   
   .pc {
     min-width:300px;
     max-width:400px;
-    border:1px solid gray;
+    border: 1px solid lightgray;
     border-radius:5px;
   }
   .pc img {
     width: 100%;
   }
-  .pc-content{
-    text-transform: uppercase;
+  .pc-content {
+    text-transform:capitalize;
     text-align: left;
+    padding-left: 10px;
   }
   
+  /* #F5630A */
   .label {
-    background-color: orangered;
+    background-color:var(--primary-color);
+    background:var(--primary-color);
+    transition: width 2s, height 2s, transform 2s;
     color: white;
     display:inline-block;
-    padding: 8px 4px;
-    border:1px solid orangered;
+    padding:4px;
+    border:1px solid var(--primary-color);
     border-radius:5px;
-    margin-left:10px;
     cursor:pointer;
   }
-  i {
-  font-size:20px;
-  color:orangered;
-  margin:10px;
+
+  .rating-container {
+    display:flex;
+    justify-content: flex-start;
   }
+
+  .rating-start-filled {
+    font-size: 1rem;
+    color:var(--primary-color);
+    margin:2px;
+  }
+
   .btn {
-    background-color: orangered;
+    background-color: var(--primary-color);
     color:#fff;
     font-size: 25px;
     border:none;
@@ -59,18 +73,19 @@
     width: 95%;
     height:40px;
   }
-  .btn{
+  .btn {
   padding:-20px;
-  margin-left:10px;
   margin-bottom:10px;
   cursor: pointer;
   }
-  p{
-    margin-left:10px;
+  p {
+    color:lightgray;
   }
-  h4{
-    margin-left:10px;
+  /* Muhsin icin odev: First word siyah yah pseudo selector kullanarak */
+  p::first-letter {
+    color: black;
   }
+
   .bag{
     font-size: 15px;
     font-weight: bold;
@@ -90,12 +105,6 @@
     height: 200px;
     transform: rotate(180deg);
   
-  }
-  .label{
-    width: 300px;
-    height: 50px;
-    background: orangered;
-    transition: width 2s, height 2s, transform 2s;
   }
   .btn:hover{
     background-color: deeppink;
